@@ -1,7 +1,7 @@
 /*
  * fVDI preferences and driver loader
  *
- * $Id: loader.c,v 1.27 2006-02-20 17:04:01 standa Exp $
+ * $Id: loader.c,v 1.28 2006-02-20 20:49:44 standa Exp $
  *
  * Copyright 1997-2003, Johan Klockars 
  * This software is licensed under the GNU General Public License.
@@ -39,8 +39,8 @@ Fontheader* ft2_vst_point(Virtual *vwk, long ptsize, short *sizes);
 long        ft2_text_render_default(Virtual *vwk, unsigned long coords,
                                     short *s, long slen);
 void*       ft2_char_bitmap(Fontheader *font, long ch, short *bitmap_info);
+void*       ft2_char_advance(Fontheader *font, long ch, short *advance_info);
 void        ft2_xfntinfo(Virtual *vwk, Fontheader *font, long flags, long index, XFNT_INFO *info);
-
 
 long        (*external_init)(void) = ft2_init;
 Fontheader* (*external_load_font)(const char *font) = ft2_load_font;
@@ -50,6 +50,7 @@ Fontheader* (*external_vst_point)(Virtual *vwk, long size, short *sizes) = ft2_v
 long        (*external_renderer)(Virtual *vwk, unsigned long coords,
                                  short *text, long length) = ft2_text_render_default;
 void*       (*external_char_bitmap)(Fontheader *font, long ch, short *bitmap_info) = ft2_char_bitmap;
+void*       (*external_char_advance)(Fontheader *font, long ch, short *advance_info) = ft2_char_advance;
 void        (*external_xfntinfo)(Virtual *vwk, Fontheader *font, long flags, long index, XFNT_INFO *info) = ft2_xfntinfo;
 #else
 long        (*external_init)(void) = 0;
@@ -60,6 +61,7 @@ Fontheader* (*external_vst_point)(Virtual *vwk, long size, short *sizes) = 0;
 long        (*external_renderer)(Virtual *vwk, unsigned long coords,
                                  short *text, long length) = 0;
 void*       (*external_char_bitmap)(Fontheader *font, long ch, short *bitmap_info) = 0;
+void*       (*external_char_advance)(Fontheader *font, long ch, short *advance_info) = 0;
 void        (*external_xfntinfo)(Virtual *vwk, Fontheader *font, long flags, long index, XFNT_INFO *info) = 0;
 #endif
 
